--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <!-- favicons
 	================================================== -->
-	<!-- <link rel="icon" type="image/png" href="pin.png"> -->
+	<link rel="icon" type="image/png" href="af.png"> 
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
 
 </head>
@@ -47,7 +47,6 @@
 						 <li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						 <li><a class="smoothscroll"  href="#services" title="">Services</a></li>
 						 <li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
-						 <li><a href="styles.html" title="">Style Demo</a></li>
 					 </ul>
 				 </nav> 
 		</div>
@@ -61,8 +60,17 @@
 		<div class="intro-content">
 			<div class="row">
 				<div class="main-title">
+					<!-- Foto -->
 					<img src="foto-mia.jpg" style="border-radius: 15%; max-width: 30%;float: left; margin: 0px 0px 15px 15px;">
-					<span class="col-twelve" style="text-align: right;">Hi there, nice to meet you!</span>
+					<!-- Texto -->
+					<div >
+						<h2 style="text-align: right;">Hi there, nice to meet you!</h3>
+						<p style="text-align: right;color: #9d9d9d;size: 3rem;text-indent: 30px;
+						margin-top: 1em;
+						margin-bottom: 1em;
+						margin-left: 3em;
+						margin-right: 0;font-family: poppins-semibold;">I'm Agustín Freiberger, a 27 years old dev engineer from 🇦🇷 Argentina who loves creating soulutions for a better world!</p>
+					</div>
 				</div>
 			</div>
 		</div> <!-- /intro-content -->
