--- a/index.html
+++ b/index.html
@@ -64,12 +64,8 @@
 					<img src="foto-mia.jpg" style="border-radius: 15%; max-width: 30%;float: left; margin: 0px 0px 15px 15px;">
 					<!-- Texto -->
 					<div >
-						<h2 style="text-align: right;">Hi there, nice to meet you!</h3>
-						<p style="text-align: right;color: #9d9d9d;size: 3rem;text-indent: 30px;
-						margin-top: 1em;
-						margin-bottom: 1em;
-						margin-left: 3em;
-						margin-right: 0;font-family: poppins-semibold;">I'm Agustín Freiberger, a 27 years old dev engineer from 🇦🇷 Argentina who loves creating soulutions for a better world!</p>
+						<h2 class="big-title">Hi there, nice to meet you!</h3>
+						<p class="subtitle">I'm Agustín Freiberger, a 27 years old dev engineer from 🇦🇷 Argentina who loves creating soulutions for a better world!</p>
 					</div>
 				</div>
 			</div>
