--- a/index.html
+++ b/index.html
@@ -61,22 +61,21 @@
 			<div class="row">
 				<div class="main-title">
 					<!-- Foto -->
-					<img src="foto-mia.jpg" style="border-radius: 15%; max-width: 30%;float: left; margin: 0px 0px 15px 15px;">
+					<img src="foto-mia.jpg" style="border-radius: 50%; max-width: 30%;float: left; margin: 0px 0px 15px 15px;">
 					<!-- Texto -->
 					<div >
-						<h2 class="big-title">Hi there, nice to meet you!</h3>
-						<p class="subtitle">I'm Agustín Freiberger, a 27 years old dev engineer from 🇦🇷 Argentina who loves creating soulutions for a better world!</p>
+						<h3 class="big-title">Hi there, nice to meet you!</h3>
+						<p class="subtitle">I'm Agustín, a 28 years old dev engineer from Argentina 🇦🇷 who loves creating solutions 💡 for a better world 🌎!</p>
 					</div>
 				</div>
 			</div>
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-github"></i></a></li>
+			<li><a href="https://www.facebook.com/agustin.freiberger/"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/afreiberger/"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/agustinfreiberger"><i class="fa fa-github"></i></a></li>
 		</ul> <!-- /intro-social -->
-		
 
 	</section> <!-- /intro -->
 	<!-- about section
@@ -86,16 +85,17 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>About me</h5>
-				<h1>Let me introduce myself.</h1>
+				 <h5>About me</h5>
+				<!-- <h1>Let me introduce myself.</h1> -->
 
-				<div class="intro-info">
+				<!-- <div class="intro-info"> -->
 					
 					<!-- imagen de avatar -->
 					<!-- <img src="images/me-pic.jpg" alt="Profile Picture" style="margin-left: -20px;margin-top: -10px;"> -->
-
-					<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
-				</div>
+					<!-- <p class="lead">
+						I'm Agustín, a 28 years old dev engineer from Argentina 🇦🇷 who loves creating solutions 💡 for a better world 🌎!
+					</p>
+				</div> -->
 
 			</div>
 		</div>
@@ -106,30 +106,26 @@
 			<div class="col-six tab-full">
 
 				<h3>Profile</h3>
-				<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
-
+				<p>
+					Professional developer with experience in designing and implementing web-based solutions with willingness for teamwork and a responsible, communicative, analytical, goal-oriented profile and positive thinking.
+				</p>
 				<ul class="info-list">
 					<li>
 						<strong>Fullname:</strong>
-						<span>Juan Dela Cruz</span>
+						<span>Agustin Freiberger</span>
 					</li>
 					<li>
 						<strong>Birth Date:</strong>
-						<span>September 28, 1987</span>
+						<span>July 10, 1993</span>
 					</li>
 					<li>
 						<strong>Job:</strong>
-						<span>Freelancer, Frontend Developer</span>
-					</li>
-					<li>
-						<strong>Website:</strong>
-						<span>www.kardswebsite.com</span>
+						<span>Software engineer</span>
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span>me@kardswebsite.com</span>
+						<span>afreiberger5@gmail.com</span>
 					</li>
-
 				</ul> <!-- /info-list -->
 
 			</div>
@@ -137,43 +133,42 @@
 			<div class="col-six tab-full">
 
 				<h3>Skills</h3>
-				<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+				<p>Alongside my career I've worked with many languages and frameworks. The main ones are listed below.</p>
 
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent90"><span>90%</span></div>
-						<strong>HTML5</strong>
+						<div class="progress percent70"><span>70%</span></div>
+						<strong>C#</strong>
 					</li>
 					<li>
 						<div class="progress percent85"><span>85%</span></div>
-						<strong>CSS3</strong>
+						<strong>SQL</strong>
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
-						<strong>JQuery</strong>
+						<strong>.NET</strong>
 					</li>
 					<li>
-						<div class="progress percent95"><span>95%</span></div>
-						<strong>PHP</strong>
+						<div class="progress percent50"><span>50%</span></div>
+						<strong>Java</strong>
 					</li>
 					<li>
-
-						<div class="progress percent75"><span>75%</span></div>
-						<strong>Wordpress</strong>
+						<div class="progress percent30"><span>30%</span></div>
+						<strong>Python</strong>
 					</li>
 
-				</ul> <!-- /skill-bars -->
+				</ul> 
 
 			</div>
 
 		</div>
 
-		<div class="row button-section">
+		<!-- <div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
 				<a href="#" title="Download CV" class="button button-primary">Download CV</a>
 			</div>
-		</div>
+		</div> -->
 
 	</section> <!-- /process-->
 	<!-- resume Section
@@ -184,12 +179,78 @@
 			<div class="col-twelve">
 
 				<h5>Resume</h5>
-				<h1>More of my credentials.</h1>
-
-				<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
+				<!-- <h1>More of my credentials.</h1> -->
 			</div>
 		</div> <!-- /section-intro-->
+
+		<div class="row resume-timeline">
+
+			<div class="col-twelve resume-header">
+ 
+				<h2>Education</h2>
+ 
+			</div> <!-- /resume-header -->
+ 
+			<div class="col-twelve">
+ 
+				<div class="timeline-wrap">
+ 
+					<div class="timeline-block">
+ 
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+ 
+						<div class="timeline-header">
+							<h3>System Analyst</h3>
+							<p>June 2012 - Dic 2015</p>
+						</div>
+ 
+						<div class="timeline-content">
+							<h4>Universidad Nacional del Centro de la Provincia de Buenos Aires (UNICEN)</h4>
+						</div>
+							
+					</div> <!-- /timeline-block -->
+ 
+					<div class="timeline-block">
+ 
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+ 
+						<div class="timeline-header">
+							<h3>Software engineer</h3>
+							<p>June 2016 - Present</p>
+						</div>
+ 
+						<div class="timeline-content">
+							<h4>Universidad Nacional del Centro de la Provincia de Buenos Aires (UNICEN)</h4>
+						</div>
+ 
+					</div> <!-- /timeline-block -->
+ 
+					<div class="timeline-block">
+ 
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+ 
+						<div class="timeline-header">
+							<h3>B2 Certificate in English</h3>
+							<p>Dic 2011</p>
+						</div>
+ 
+						<div class="timeline-content">
+							<h4>Asociación Argentina de Cultura Inglesa</h4>
+						</div>
+ 
+					</div> <!-- /timeline-block -->
+ 
+				</div> <!-- /timeline-wrap -->   			
+ 
+			</div> <!-- /col-twelve -->
+			
+		</div> <!-- /resume-timeline -->
 
 		<div class="row resume-timeline">
 
@@ -206,125 +267,17 @@
 					<div class="timeline-block">
 
 						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>UI Designer</h3>
-							<p>July 2015 - Present</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Awesome Studio</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Front-end Developer</h3>
-							<p>July 2014 - June 2015</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Super Cool Agency</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Web Designer</h3>
-							<p>May 2013 - June 2014</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Great Designs Studio</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-				<!--</div>--> <!-- /timeline-wrap -->
-
-			</div> <!-- /col-twelve -->
-
-		</div> <!-- /resume-timeline -->
-
-		<div class="row resume-timeline">
-
-			<div class="col-twelve resume-header">
-
-				<h2>Education</h2>
-
-			</div> <!-- /resume-header -->
-
-			<div class="col-twelve">
-
-				<div class="timeline-wrap">
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
 						</div>
 
 						<div class="timeline-header">
-							<h3>Master Degree</h3>
-							<p>July 2015 - Present</p>
+							<h3>.NET Developer</h3>
+							<p>Ago 2019 - Sep 2021</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>University of Life</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-briefcase"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Bachelor Degree</h3>
-							<p>July 2014 - June 2015</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>State Design University</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-						</div>
-
-					</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-briefcase"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Bachelor Degree</h3>
-							<p>May 2013 - June 2014</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Design College</h4>
-							<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+							<h4>Housewell S.A.</h4>
+							<p>Collaborated with other developers on designing, developing and implementing web pages, desktop tasks and APIs using multiple frameworks and techonologies such as .NET Core, ASP.NET MVC, Entity Framework and Blazor. Provided technical support to clients and collegues.</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -610,126 +563,7 @@
 	<!-- /cta -->
 	<!-- services Section
 	================================================== -->
-	<section id="services">
 
-		<div class="overlay"></div>
-
-		<div class="row section-intro">
-			<div class="col-twelve">
-
-				<h5>Services</h5>
-				<h1>What Can I Do For You?</h1>
-
-				<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
-			</div>
-		</div> <!-- /section-intro -->
-
-		<div class="row services-content">
-
-			<div id="owl-slider" class="owl-carousel services-list">
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-earth"></i></span>
-
-					<div class="service-content">
-
-						<h3>Webdesign</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-window"></i></span>
-
-					<div class="service-content">
-
-						<h3>Web Development</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-paint-brush"></i></span>
-
-					<div class="service-content">
-
-						<h3>Branding</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-toggles"></i></span>
-
-					<div class="service-content">
-
-						<h3>UI/UX Design</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-image"></i></span>
-
-					<div class="service-content">
-
-						<h3>Graphics Design</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-chat"></i></span>
-
-					<div class="service-content">
-
-						<h3>Consultancy</h3>
-
-						<p class="desc">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-			</div> <!-- /services-list -->
-
-		</div> <!-- /services-content -->
-
-	</section> <!-- /services -->
 	
 	<!-- stats Section
 	================================================== -->
@@ -960,16 +794,6 @@
 
 	<footer>
 		<div class="row">
-
-			<div class="col-six tab-full pull-right social">
-
-				<ul class="footer-social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-				</ul>
-
-			</div>
 
 			<div class="col-six tab-full">
 				<div class="copyright">
